Broken ink correction

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ h3 {
 }
 h4 {
     font-size: 15px;
-    color: rgb(30, 80, 15);
-    text-decoration: underline;
+    color: rgb(17, 34, 4);
+    font-style: italic;
     padding: 0px 30px 0px 30px;
 }
 
@@ -46,9 +46,13 @@ img{
     height: auto;
 }
 
-footer{
+footer {
     border-top: 4px solid rgb(30, 80, 15);
     border-bottom: 4px solid rgb(30, 80, 15);
+}
+
+footer, p {
+    text-align: left;
 }
 
 #nav_container {
@@ -59,6 +63,10 @@ footer{
 
 a {
     color: rgb(30, 80, 15);
+}
+
+a:hover {
+    color: rgb(236, 249, 159)
 }
 
 .nav_button:hover {
